vlib/v/checker/tests/shared_param_err.out
vlib/v/checker/tests/shared_param_err.vv:7:27: notice: unused parameter: `c`
    5 | }
    6 | 
    7 | fn (shared b St) g(shared c St) {
      |                           ^
    8 |     lock b {
    9 |         b.x = 100
vlib/v/checker/tests/shared_param_err.vv:23:12: error: method `g` parameter `c` is `shared`, so use `shared a` instead
   21 |         x: 10
   22 |     }
   23 |     spawn a.g(a)
      |               ^
   24 |     spawn foo(a)
   25 |
vlib/v/checker/tests/shared_param_err.vv:24:12: error: function `foo` parameter `b` is `shared`, so use `shared a` instead
   22 |     }
   23 |     spawn a.g(a)
   24 |     spawn foo(a)
      |               ^
   25 | 
   26 |     rlock a {
